# pokemon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp  lua.js
src/: buffer.c  buffer.h  example.cpp  linux.c  linux.h  platform.h  pokemon.cpp  pokemon.h  test.cpp  windows.c
